<resources>
    <string name="app_name">MyGifticon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="list">사용가능한 기프티콘</string>
    <string name="scan">scan 하는 프래그먼트</string>
    <string name="make">정보입력</string>

    <string name="explain">상품설명</string>
    <string name="seller">교환처</string>
    <string name="title">상품명</string>
    <string name="price">가격</string>

    <string name="makeButton">기프티콘 생성하기</string>
    <string name="makeImage">사진선택</string>
    <string name="makeQR">큐알코드 생성</string>

    <string name="makeButtonNext">기프티콘 생성중 입니다...</string>

    <string name ="useButton">기프티콘 사용하기</string>


</resources>