<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/makeText"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/make"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/setTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="7dp"
                android:hint="@string/title"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/setExplain"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="7dp"
                android:hint="@string/explain">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/setPrice"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="7dp"
                android:hint="@string/price">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/setSeller"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="7dp"
                android:hint="@string/seller">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/makeImage"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:scaleType="center"
                    android:id="@+id/setImage"
                    android:layout_width="270dp"
                    android:layout_height="230dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_load_image"
                    android:src="@drawable/ic_set_image_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/setImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="사진선택하기"
                    app:layout_constraintEnd_toEndOf="@id/setImage"
                    app:layout_constraintStart_toStartOf="@id/setImage"
                    app:layout_constraintTop_toBottomOf="@id/setImage" />
            </androidx.constraintlayout.widget.ConstraintLayout>


<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="?attr/actionBarSize"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:gravity="center_vertical"-->
<!--                android:orientation="horizontal">-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="16dp"-->
<!--                    android:text="@string/makeQR"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="20sp"-->
<!--                    android:textStyle="bold" />-->


<!--            </LinearLayout>-->

<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content">-->

<!--                <ImageView-->
<!--                    android:id="@+id/setQR"-->
<!--                    android:layout_width="170dp"-->
<!--                    android:layout_height="170dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:background="@drawable/ic_load_image"-->
<!--                    android:scaleType="fitCenter"-->
<!--                    android:src="@drawable/ic_baseline_qr_code_2_24"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

<!--                <Button-->
<!--                    android:id="@+id/setQRButton"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="7dp"-->
<!--                    android:text="QR코드 생성하기"-->
<!--                    app:layout_constraintEnd_toEndOf="@id/setQR"-->
<!--                    app:layout_constraintStart_toStartOf="@id/setQR"-->
<!--                    app:layout_constraintTop_toBottomOf="@id/setQR" />-->
<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/makeButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/ic_make_button"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/makeButton"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/progressLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:text="기프티콘 생성중 입니다..."
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"></TextView>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/maincolor" />
        </LinearLayout>
    </FrameLayout>
</ScrollView>