<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/captureLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#E57373"
        android:elevation="20dp"
        app:cardCornerRadius="27dp">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="500dp"
            android:layout_margin="10dp"
            android:background="@drawable/ic_gifticon_background"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/giftImageUrl"
                android:layout_width="270dp"
                android:layout_height="230dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:scaleType="center"
                android:src="@drawable/ic_set_image_24" />

            <TextView
                android:id="@+id/giftExplain"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="4dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/explain"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="270dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5.5dp"
                android:background="@color/white2" />

            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:paddingEnd="3dp"
                    android:id="@+id/giftQR"
                    android:layout_width="158dp"
                    android:layout_height="158dp"
                    android:src="@drawable/ic_baseline_qr_code_2_24"
                    tools:ignore="RtlSymmetry" />

                <LinearLayout
                    android:layout_width="112dp"
                    android:layout_height="158dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="26dp"
                        android:gravity="end"
                        android:text="@string/seller" />

                    <TextView
                        android:id="@+id/giftSellerId"
                        android:layout_width="match_parent"
                        android:layout_height="26dp"
                        android:ellipsize="end"
                        android:gravity="end"
                        android:hint="@string/seller"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="26dp"
                        android:gravity="end"
                        android:text="@string/title" />

                    <TextView
                        android:id="@+id/giftTitle"
                        android:layout_width="match_parent"
                        android:layout_height="26dp"
                        android:ellipsize="end"
                        android:gravity="end"
                        android:hint="@string/title"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="26dp"
                        android:gravity="end"
                        android:text="@string/price" />

                    <TextView
                        android:id="@+id/giftPrice"
                        android:layout_width="match_parent"
                        android:layout_height="26dp"
                        android:ellipsize="end"
                        android:gravity="end"
                        android:hint="@string/price"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:text="SELFTICON"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:id="@+id/ClickStateFromList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/deleteButton"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginRight="45dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_baseline_delete_24" />

            <ImageView
                android:id="@+id/shareButton"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_baseline_share_24" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ClickStateFromScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/useButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_make_button"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/useButton"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </FrameLayout>
</LinearLayout>